<resources>
    <string name="app_name">DGitUserApi</string>
    <string name="Username">username</string>
    <string name="search">search</string>
    <string name="company">company</string>
    <string name="address">address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="followers">Followers</string>
    <string name="_200">200</string>
    <string name="followings">Followings</string>
    <string name="repository">Repository</string>
    <string name="data_empty">No Data to be Shown</string>
    <string name="search_hint">Masukan Username</string>
    <string name="language">language</string>
    <string name="image_watchers">Images watcher</string>
    <string name="image_star">image star</string>
    <string name="ID">ID :</string>
    <string name="data_not_found">User Not Found</string>
    <string name="example_search">brian</string>
    <string name="menu_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite_user">Favorite User</string>
</resources>