<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailUserActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorPrimary">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?android:colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <ImageButton
                        android:id="@+id/ib_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_favorite_24"
                        android:tag="unlike"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.994"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:contentDescription="@string/favorite_user" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_user_detail"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@android:color/darker_gray" />

                    <ProgressBar
                        android:id="@+id/pbDetailUser"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/DFGitUserTextView.White.Light.UserSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:maxLines="1"
                        android:text="@string/Username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_user_detail" />

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_address"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

                    <TextView
                        android:id="@+id/text_repo"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/repository"
                        app:layout_constraintEnd_toStartOf="@+id/text_followers"
                        app:layout_constraintHorizontal_bias="0.143"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                    <TextView
                        android:id="@+id/tv_repo"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_200"
                        app:layout_constraintEnd_toEndOf="@+id/text_repo"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/text_repo"
                        app:layout_constraintTop_toBottomOf="@+id/text_repo" />

                    <TextView
                        android:id="@+id/text_followers"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/followers"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                    <TextView
                        android:id="@+id/tv_followers"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_200"
                        app:layout_constraintEnd_toEndOf="@+id/text_followers"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/text_followers"
                        app:layout_constraintTop_toBottomOf="@+id/text_followers" />

                    <TextView
                        android:id="@+id/text_followings"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/followings"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.873"
                        app:layout_constraintStart_toEndOf="@+id/text_followers"
                        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                    <TextView
                        android:id="@+id/tv_followings"
                        style="@style/DFGitUserTextView.White.ExtraLight.DescSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_200"
                        app:layout_constraintEnd_toEndOf="@+id/text_followings"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/text_followings"
                        app:layout_constraintTop_toBottomOf="@+id/text_followings" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabIndicatorColor="@color/colorSecondary"
                app:tabSelectedTextColor="@color/colorSecondary"
                app:tabTextColor="@color/colorSecondary" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_follow_repo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>